--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,16 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
-
+CONFIG_ZMK_BACKLIGHT=y
+CONFIG_ZMK_BACKLIGHT_BRT_START=20
 # Uncomment the following line to enable the Corne OLED Display
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_BLE=y
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_SEC=y
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
+CONFIG_ZMK_KEYBOARD_NAME=JCorne
+CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN
