--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,15 +1,23 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
+# --- Gestion des LEDs (SK6812mini-e + WS2812B) ---
+# ZMK pilote les deux modèles via ce protocole unique
 CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_ZMK_BACKLIGHT=y
-CONFIG_ZMK_BACKLIGHT_BRT_START=20
-# Uncomment the following line to enable the Corne OLED Display
-CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_SPLIT_BLE=y
+
+# Paramètres de base
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=15
+# Éteindre le RGB quand le clavier est déconnecté ou en veille
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+
+# --- Affichage OLED ---
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
-CONFIG_ZMK_BLE_EXPERIMENTAL_SEC=y
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
-CONFIG_ZMK_KEYBOARD_NAME=JCorne
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
+# --- Paramètres Split & Bluetooth ---
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_BLE=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+
+# Nom du clavier
+CONFIG_ZMK_KEYBOARD_NAME="JCorne"
