--- a/config/corne.conf
+++ b/config/corne.conf
@@ -18,7 +18,7 @@ CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 #CONFIG_ZMK_WIDGET_LAYER_STATUS=n
 #CONFIG_ZMK_WIDGET_PERIPHERAL_STATUS=n
 #Bongo cat猫猫敲键盘动画
-#CONFIG_ZMK_WIDGET_BONGO_CAT=y
+CONFIG_ZMK_WIDGET_BONGO_CAT=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
@@ -41,6 +41,9 @@ CONFIG_WS2812_STRIP=y
 #键盘进入空闲状态时关闭RGB
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=60
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+# Nombre total de LEDs (Underglow + Per-key)
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=5
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
+# Forcer la longueur de la chaîne si le shield ne le fait pas
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
