--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,24 +1,13 @@
-# --- IDENTITÉ DU CLAVIER ---
-CONFIG_ZMK_KEYBOARD_NAME="JCorne"
-
-# --- GESTION DE L'ÉNERGIE (SOMMEIL) ---
-CONFIG_ZMK_SLEEP=y
-# 15 minutes avant le sommeil profond (en millisecondes)
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
-
-# --- ÉCRAN OLED ---
+# --- Écran OLED ---
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_I2C=y
 
-# --- LEDS RGB (SK6812 & WS2812) ---
+# --- LEDs ---
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
-# Luminosité de départ faible pour économiser la batterie
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=15
-# Éteindre les LEDs automatiquement quand le clavier est inactif
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+# Très important pour les clones de nice!nano
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y 
 
-# --- BLUETOOTH & SPLIT ---
+# --- Bluetooth & Batterie ---
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
