--- a/config/corne.conf
+++ b/config/corne.conf
@@ -9,5 +9,9 @@ CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y 
 
 # --- Bluetooth & Batterie ---
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+# Désactive les demandes de code PIN complexes (Passkey)
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
+# Force une connexion plus simple pour Windows/Linux
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
