--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,11 +7,16 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 # Très important pour les clones de nice!nano
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y 
+CONFIG_ZMK_BACKLIGHT_BRT_STEP=10
+CONFIG_ZMK_BACKLIGHT_BRT_START=20
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=165
+CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
 
 # --- Bluetooth & Batterie ---
-
+CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-# Désactive les demandes de code PIN complexes (Passkey)
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
-# Force une connexion plus simple pour Windows/Linux
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=3
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
