--- a/config/corne.conf
+++ b/config/corne.conf
@@ -13,7 +13,10 @@ CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=165
 # --- Bluetooth & Batterie ---
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=5
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=3
+CONFIG_BT_BAS=y
+CONFIG_BT_MAX_CONN=3
+CONFIG_BT_MAX_PAIRED=3
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 
