--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,7 +5,7 @@ CONFIG_ZMK_KEYBOARD_NAME="GJCRKBD"
 # --- LEDs ---
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
-# Très important pour les clones de nice!nano
+# Leds au demarrage
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y 
 CONFIG_ZMK_BACKLIGHT_BRT_STEP=10
 CONFIG_ZMK_BACKLIGHT_BRT_START=20
@@ -13,10 +13,4 @@ CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=165
 # --- Bluetooth & Batterie ---
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=3
-CONFIG_BT_BAS=y
-CONFIG_BT_MAX_CONN=3
-CONFIG_BT_MAX_PAIRED=3
-CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 
