--- a/config/corne.conf
+++ b/config/corne.conf
@@ -14,3 +14,4 @@ CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=165
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
+CONFIG_ZMK_STUDIO=y
