--- a/config/corne.conf
+++ b/config/corne.conf
@@ -13,5 +13,6 @@ CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=165
 # --- Bluetooth & Batterie ---
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-
+# --- Misc. ---
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1200000
 CONFIG_ZMK_STUDIO=y
