Enable sleep mode and adjust timeout settings

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -14,5 +14,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=165
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 # --- Misc. ---
+CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1200000
+CONFIG_ZMK_IDLE_TIMEOUT=120000
 CONFIG_ZMK_STUDIO=y
