--- a/config/corne.conf
+++ b/config/corne.conf
@@ -10,6 +10,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 CONFIG_ZMK_BACKLIGHT_BRT_STEP=10
 CONFIG_ZMK_BACKLIGHT_BRT_START=20
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=165
+CONFIG_ZMK_EXT_POWER=y
 # --- Bluetooth & Batterie ---
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
