--- a/config/corne.conf
+++ b/config/corne.conf
@@ -11,6 +11,8 @@ CONFIG_ZMK_BACKLIGHT_BRT_STEP=10
 CONFIG_ZMK_BACKLIGHT_BRT_START=20
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=165
 CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 # --- Bluetooth & Batterie ---
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
