--- a/config/corne.conf
+++ b/config/corne.conf
@@ -14,9 +14,10 @@ CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 # --- Bluetooth & Batterie ---
-CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 # --- Misc. ---
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM=y
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1200000
 CONFIG_ZMK_IDLE_TIMEOUT=120000
